--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ SMTP_SECURE=false
 SMTP_USER=your-email@example.com
 SMTP_PASS=your-password
 DEFAULT_FROM_EMAIL=your-email@example.com
+
+# Anthropic API configuration
+ANTHROPIC_API_KEY=your-anthropic-api-key
