--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "docxtemplater": "^3.37.12",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pizzip": "^3.1.4",
