--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,9 @@
-# Server configuration
+# Email Configuration
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+
+# OpenAI API Configuration
+OPENAI_API_KEY=your-openai-api-key-here
+
+# Server Configuration
 PORT=3000
-
-# Google Sheets API
-GOOGLE_APPLICATION_CREDENTIALS=path/to/your/credentials.json
-
-# Email configuration (for direct sending)
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=your-email@example.com
-SMTP_PASS=your-password
-DEFAULT_FROM_EMAIL=your-email@example.com
-
-# Anthropic API configuration
-ANTHROPIC_API_KEY=your-anthropic-api-key
