--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.39.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "docxtemplater": "^3.37.12",
@@ -17,6 +16,7 @@
     "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "openai": "^4.104.0",
     "pizzip": "^3.1.4",
     "sqlite3": "^5.1.6",
     "xlsx": "^0.18.5"
